--- a/streetMeet/bower.json
+++ b/streetMeet/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14"
   },
   "dependencies": {
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "alertifyjs": "~0.3.15"
   }
 }
